versions/v2.15/modules/de/pages/rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.adoc
= Knoten-Treiber
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-provisioning-drivers/manage-node-drivers.adoc 
:product-path: rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.adoc
ifeval::["{build-type}" != "community"]
:xref-global-permissions: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-global-permissions: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/global-permissions.adoc 
endif::[]

Ein Knoten-Treiber ist dasselbe wie ein https://github.com/docker/docs/blob/vnext-engine/machine/drivers/index.md[Docker Machine-Treiber]. Knoten-Treiber werden verwendet, um Hosts bereitzustellen, die Rancher zum Starten und Verwalten von Kubernetes-Clustern nutzt. Standardmäßig wird Rancher mit vielen Knoten-Treibern ausgeliefert, aber Sie können auch benutzerdefinierte Knoten-Treiber erstellen und zu Rancher hinzufügen.

Nur `Active` Knoten-Treiber werden in der Rancher-Benutzeroberfläche angezeigt, wenn Sie Knoten-Vorlagen erstellen. Wenn es bestimmte Knoten-Treiber gibt, die Sie Ihren Benutzern nicht anzeigen möchten, müssen Sie diese Knoten-Treiber deaktivieren.

[#_managing_node_drivers]
== Verwaltung von Knoten-Treibern

[NOTE]
.Voraussetzungen:
====

Um Treiber zu erstellen, zu bearbeiten oder zu löschen, benötigen Sie _eine_ der folgenden Berechtigungen:

* {xref-global-permissions}[Administrator globale Berechtigungen]
* {xref-global-permissions}#_benutzerdefinierte_global_berechtigungen[Benutzerdefinierte globale Berechtigungen] mit der {xref-global-permissions}[Verwalten von Knoten-Treibern] Rolle zugewiesen.
====


[#_activating_deactivating_node_drivers]
=== Aktivieren/Deaktivieren von Knoten-Treibern

Standardmäßig aktiviert Rancher nur Treiber für die beliebtesten Cloud-Anbieter wie Amazon EC2, Azure, DigitalOcean, Linode und vSphere. Wenn Sie einen Knoten-Treiber anzeigen oder ausblenden möchten, können Sie seinen Status ändern.

. Klicken Sie in der oberen linken Ecke auf *☰ > Cluster-Verwaltung*.
. Klicken Sie im linken Navigationsmenü auf *Treiber*.
. Wählen Sie im Tab *Knoten-Treiber* den Treiber aus, den Sie aktivieren oder deaktivieren möchten, und klicken Sie auf *⋮ > Aktivieren* oder *⋮ > Deaktivieren*.

[WARNING]
====

Sie können den Zugriff auf Cluster verlieren, nachdem Sie einen Knoten-Treiber deaktiviert haben.

Das Deaktivieren eines Knoten-Treibers wirkt sich nicht nur auf seine Sichtbarkeit in der Rancher-Benutzeroberfläche aus. Wenn Sie einen Knoten-Treiber deaktivieren oder löschen, werden alle mit diesem Treiber bereitgestellten Knoten unzugänglich.

Wenn Sie beispielsweise einen vSphere-Knoten-Treiber deaktivieren, um ihn in der Benutzeroberfläche auszublenden, und Sie haben einen vSphere-Cluster, der mit diesem Treiber bereitgestellt wurde, wird der ursprüngliche Knoten im Cluster fehlschlagen, und der gesamte Cluster wird unzugänglich. Versuche, die vSphere-Knoten zu löschen, werden fehlschlagen, wobei die Knoten in einem erweiterten `Removing` Zustand stecken bleiben.

Bevor Sie einen Knoten-Treiber deaktivieren, stellen Sie sicher, dass er keine zugehörigen Cluster hat. Eine Möglichkeit, dies zu überprüfen, besteht darin, zu sehen, ob die jeweilige Plattform für einen Knoten-Treiber unter Ihren Clustern aufgeführt ist:

. Klicken Sie in der oberen linken Ecke auf *☰ > Cluster-Verwaltung*.
. Wählen Sie *Cluster* aus.
. Überprüfen Sie die *Provider*-Spalte der Tabelle auf Instanzen des Knoten-Treibers, den Sie deaktivieren.
====


[#_adding_custom_node_drivers]
=== Hinzufügen benutzerdefinierter Knoten-Treiber

Wenn Sie einen Knoten-Treiber verwenden möchten, den Rancher nicht standardmäßig unterstützt, können Sie den Treiber dieses Anbieters hinzufügen, um ihn zu verwenden, um Knoten-Vorlagen und schließlich Knotengruppen für Ihren Kubernetes-Cluster zu erstellen.

. Klicken Sie in der oberen linken Ecke auf *☰ > Cluster-Verwaltung*.
. Klicken Sie im linken Navigationsmenü auf *Treiber*.
. Klicken Sie auf die Registerkarte *Knoten-Treiber* und anschließend auf *Knoten-Treiber hinzufügen*.
. Vervollständigen Sie das Formular *Knoten-Treiber hinzufügen*. Klicken Sie dann auf *Erstellen*.

[#_developing_your_own_node_drivers]
=== Entwicklung eigener Knoten-Treiber

Knoten-Treiber werden mit https://github.com/rancher/machine[Rancher Machine] implementiert, einem Fork von https://github.com/docker/machine[Docker Machine]. Docker Machine wird nicht mehr aktiv weiterentwickelt.

Verweisen Sie auf die ursprüngliche https://github.com/docker/docs/blob/vnext-engine/machine/overview.md[Docker Machine-Dokumentation] für Details zur Entwicklung eigener Knoten-Treiber.
